<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logo"
        android:fontFamily="@font/montserrat_bold"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/titlename"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/library"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/library"
        android:fontFamily="@font/montserrat_bold"
        android:textAlignment="center"
        android:textSize="25sp"
        android:ems="10"
        android:layout_below="@+id/logo"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/authorize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/authorize"
        android:fontFamily="@font/montserrat_bold"
        android:textAlignment="center"
        android:textSize="34sp"
        android:ems="10"
        android:layout_below="@+id/logo"
        android:layout_marginTop="110dp"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <EditText
        android:id="@+id/user_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/authorize"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="50sp"
        android:ems="10"
        android:fontFamily="@font/montserrat_bold"
        android:hint="@string/hint_user_field"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="34sp" />

    <Button
        android:id="@+id/trans_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_field"
        android:layout_marginHorizontal="130dp"
        android:layout_marginTop="30dp"
        android:text="@string/trans_btn"
        android:textAlignment="center"
        android:textSize="34sp" />

</RelativeLayout>