<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <Button
        android:id="@+id/book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60sp"
        android:layout_marginTop="80sp"
        android:ems="10"
        android:fontFamily="@font/montserrat_bold"
        android:onClick="book"
        android:text="@string/book_btn"
        android:textAlignment="center"
        android:textSize="24sp" />

    <Button
        android:id="@+id/readers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/book"
        android:layout_marginHorizontal="60sp"
        android:layout_marginTop="130sp"
        android:ems="10"
        android:fontFamily="@font/montserrat_bold"
        android:onClick="client"
        android:text="@string/reader_btn"
        android:textAlignment="center"
        android:textSize="24sp" />
    <Button
        android:id="@+id/going"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60sp"
        android:layout_marginTop="130sp"
        android:ems="10"
        android:layout_below="@+id/readers"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/going_btn"
        android:textAlignment="center"
        android:textSize="26sp"/>
</RelativeLayout>